#ifndef CONSTANT_H
#define CONSTANT_H

enum ENTITY_TYPE{
    DEFAULT,
    PLAYER,
    SHIP,
    BOARD,
    WINDOW_REND,
    NUMBER_ENTITY_TYPE_DO_NOT_USE
};

enum MASK_LAYER{
    layer_1,
    layer_2,
    layer_3,
    layer_4,
    layer_5,
    layer_6,
    NUMBER_MASK_LAYER_DO_NOT_USE
};


#endif
